[tool.poetry]
name = "email-reminder"
version = "0.1.0"
description = "Email reminder job"
authors = ["Hongjing Chen <Hongjing.Chen@gov.bc.ca>"]
license = "Apache 2.0"
# packages = [{include = "../email_reminder"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-Moment = "^1.0.5"
Flask-Script = "^2.0.6"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
Werkzeug = "^2.3.7"
aniso8601 = "^9.0.1"
attrs = "^23.1.0"
blinker = "^1.6.2"
certifi = "^2023.7.22"
click = "^8.1.6"
ecdsa = "^0.18.0"
flask-jwt-oidc = "^0.3.0"
gunicorn = "^20.1.0"
itsdangerous = "^2.1.2"
jsonschema = "^4.19.0"
pyasn1 = "^0.5.0"
pyrsistent = "^0.19.3"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
pytz = "^2023.3"
rsa = "^4.9"
sentry-sdk = "^1.29.2"
six = "^1.16.0"
urllib3 = "^1.22.0"
legal_api = { git = "https://github.com/bcgov/lear.git", subdirectory = "legal-api", branch = "dev_legal_name_changes" }
registry-schemas = {git = "https://github.com/bcgov/business-schemas.git", branch = "dev_legal_name_changes"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
requests = "^2.31.0"
PyHamcrest = "^2.0.4"
flake8 = "^6.1.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-quotes = "^3.3.2"
pep8-naming = "^0.13.3"
autopep8 = "^2.0.2"
coverage = "^7.3.0"
pylint = "^2.17.5"
pylint-flask = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
