[tool.poetry]
name = "future-effective-filings"
version = "0.1.0"
description = ""
authors = ["karimjazzar <karim@jazzar.ca>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "future_effective_filings"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-babel = "^3.1.0"
flask-moment = "0.10.0"
flask-script = "2.0.6"
Flask = "^2.3.2"
aniso8601 = "8.1.0"
attrs = "^23.1.0"
certifi = "2020.12.5"
chardet = "3.0.4"
ecdsa = "0.14.1"
flask-jwt-oidc = "^0.3.0"
flask-restplus = "0.13.0"
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
idna = "2.10"
jsonschema = "^4.17.3"
protobuf = "3.19.5"
pyasn1 = "0.4.8"
pyrsistent = "0.17.3"
python-dateutil = "2.8.1"
python-dotenv = "^1.0.0"
python-jose = "3.2.0"
requests = "^2.31.0"
rsa = "4.6"
sentry-sdk = "^1.24.0"
six = "1.15.0"
urllib3 = "1.26.11"
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"