[tool.poetry]
name = "future-effective-filings"
version = "0.1.0"
description = ""
authors = ["karimjazzar <karim@jazzar.ca>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-babel = "^3.1.0"
flask-moment = "0.10.0"
flask-script = "2.0.6"
Flask = "^2.3.2"
aniso8601 = "8.1.0"
attrs = "^23.1.0"
certifi = "2020.12.5"
chardet = "3.0.4"
ecdsa = "0.14.1"
flask-jwt-oidc = "^0.3.0"
flask-restplus = "0.13.0"
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
idna = "2.10"
jsonschema = "^4.17.3"
protobuf = "3.19.5"
pyasn1 = "0.4.8"
pyrsistent = "0.17.3"
python-dateutil = "2.8.1"
python-dotenv = "^1.0.0"
python-jose = "3.2.0"
requests = "^2.31.0"
rsa = "4.6"
sentry-sdk = "^1.24.0"
six = "1.15.0"
urllib3 = "1.26.11"
werkzeug = "^2.3.7"
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
black = "^23.12.1"
pylint = "^3.0.3"
bandit = "^1.7.6"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[tool.bandit]
exclude_dirs = [".venv","tests"]
skips = ["B104"]

[tool.flake8]
ignore = ["F401","E402", "Q000", "E203", "W503", "W504" ]
exclude = [
    ".venv",
    ".git",
    "*migrations*"
]
per-file-ignores = [
    "__init__.py:F401",
    "*.py:B902"
]
max-line-length = 120
docstring-min-length=10
count = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.main]
fail-under = 10
max-line-length = 120
ignore = [ "migrations", "devops", "tests"]
ignore-patterns = ["^\\.#"]
ignored-modules= ["flask_sqlalchemy", "sqlalchemy", "SQLAlchemy" , "alembic", "scoped_session"]
ignored-classes= "scoped_session"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
extension-pkg-whitelist = "pydantic"
notes = ["FIXME","XXX","TODO"]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]
disable = "C0209,C0301,W0511,W0613,W0703,W1514,R0801,R0902,R0903,R0911,R0401,R1705,R1718,W3101"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "any"
variable-naming-style = "snake_case"
docstring-min-length = -1
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make", "os._exit"]
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"