[tool.poetry]
name = "sftp-gazette"
version = "0.1.0"
description = "SFTP Gazette job"
authors = ["Steven Chen <Steven.Chen@gov.bc.ca>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Click = "^8.0.0"
Flask = "^2.3.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
SQLAlchemy = "^2.0.0"
Werkzeug = "^2.3.7"
attrs = "^19.2.0"
autopep8 = "^2.0.2"
aws-sam-cli = "^1.37.0"
certifi = "^2020.4.5.1"
future = "^0.18.2"
idna = "^2.9"
importlib-metadata = "^3.6.0"
ipython = "7.10.0"
ipython-sql = "^0.5.0"
jsonschema = "^3.2.0"
jupyter = "^1.0.0"
marshmallow = "^2.20.5"
matplotlib = "^3.3.3"
more-itertools = "^7.2.0"
pandas = "^1.2.4"
papermill = "^2.3.0"
paramiko = "^2.7.2"
pep8 = "^1.7.1"
pylint = "^3.0.0"
pylint-flask ="^0.5"
psycopg2-binary = "^2.8.5"
pyrsistent = "^0.16.0"
pysftp = "^0.2.9"
pytest = "^7.0.0"
python-dateutil = "^2.8.1" 
python-dotenv = "^0.13.0"
pytz = "^2019.3"
requests = "^2.25.1"
schedule = "^1.2.0"
simplejson = "^3.7.0"
six = "^1.15.0"
spacy = "^3.7.0"
urllib3 = "^1.22.0"
zipp = "^3.1.0"

registry-schemas = {git = "https://github.com/bcgov/business-schemas.git", branch = "feature-legal-name"}
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
pg8000 = "^1.29.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"