[tool.poetry]
name = "business-emailer"
version = "0.1.0"
description = "This module is the service worker for sending emails about entity related events."
authors = ["Hrvoje Fekete <hrvoje.fekete@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "3.11.14"
aiosignal = "1.3.2"
alembic = "1.15.2"
aniso8601 = "10.0.0"
arrow = "1.3.0"
async-timeout = "5.0.1"
asyncio-nats-client = "0.11.5"
asyncio-nats-streaming = "0.4.0"
attrs = "25.3.0"
Babel = "2.17.0"
blinker = "1.9.0"
cachelib = "0.13.0"
certifi = "2025.1.31"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
datedelta = ">=1.4,<2.0"
dpath = "2.2.0"
ecdsa = "0.19.1"
expiringdict = "1.2.2"
Flask = "3.1.0"
Flask-Babel = "4.0.0"
Flask-Cors = "5.0.1"
flask-jwt-oidc = "0.8.0"
#Flask-Migrate = "4.1.0"
Flask-Moment = "1.0.6"
Flask-Pydantic = "0.12.0"
flask-restx = "1.3.0"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = ">=3.1.1,<4.0.0"
fqdn = "1.5.1"
frozenlist = "1.5.0"
gunicorn = "23.0.0"
idna = "3.10"
importlib-resources = "6.5.2"
isoduration = "20.11.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
launchdarkly-server-sdk = "^9.10.0"
Mako = "1.3.9"
MarkupSafe = "3.0.2"
minio = "7.2.15"
multidict = "6.2.0"
nest-asyncio = "1.6.0"
Pillow = "11.1.0"
pkgutil-resolve-name = "1.3.10"
protobuf = "==3.20.*"
psycopg2-binary = "2.9.10"
pyasn1 = "0.6.1"
pycountry = ">=24.6.1,<25.0.0"
pydantic = ">=2.10.6,<3.0.0"
PyPDF2 = "3.0.1"
pyRFC3339 = "2.0.1"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0"
python-dotenv = "1.1.0"
python-editor = "1.0.4"
python-jose = "2.0.2"
pytz = "2025.1"
reportlab = "4.3.1"
requests ="2.32.3"
rfc3339-validator = "0.1.4"
rfc3987 = "1.3.8"
rsa = "4.9"
semver = "3.0.4"
sentry-sdk = "2.24.1"
six = "1.17.0"
SQLAlchemy = "2.0.40"
SQLAlchemy-Continuum = "1.4.2"
SQLAlchemy-Utils = "0.41.2"
strict-rfc3339 = "0.7"
typing-extensions = "4.13.0"
uri-template = "1.3.0"
urllib3 = "2.3.0"
webcolors = "24.11.1"
Werkzeug = "3.1.3"
yarl = "1.18.3"
zipp = "3.15.0"
legacy-cgi = "^2.6.3"
business-model = {path = "../../python/common/business-registry-model"}
business-registry-common = {path = "../../python/common/business-registry-common"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "6.1.0"
pytest-asyncio = "0.26.0"
requests-mock = "1.12.1"
black = "^25.1.0"
flake8 = "^7.1.2"
freezegun = "^1.5.1"

# Git-based dependencies
registry-schemas = {git = "https://github.com/bcgov/business-schemas.git", rev = "2.18.39"}
#business-model = {git = "https://github.com/bcgov/lear.git", subdirectory = "python/common/business-registry-model"}
business-registry-account = {git = "https://github.com/bcgov/lear.git", subdirectory = "python/common/business-registry-account"}
#business-registry-common = {git = "https://github.com/bcgov/lear.git", subdirectory = "python/common/business-registry-common"}
flask-migrate = {version = ">=4.1.0,<5.0.0"}
entity-queue-common = {git = "https://github.com/bcgov/lear.git", subdirectory = "queue_services/common"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
