[project]
name = "business-pay"
version = "1.0.0"
description = "Business Registry Pay Service"
authors = [{name = "thor",email = "thor@wolpert.ca"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.13,<4"

dependencies = [
  "structured-logging @ git+https://github.com/bcgov/sbc-connect-common.git@main#subdirectory=python/structured-logging",
  "gcp-queue @ git+https://github.com/bcgov/sbc-connect-common.git@main#subdirectory=python/gcp-queue",
  "flask[async] (>=3.1.2,<4.0.0)",
  "flask-sqlalchemy (>=3.1.1,<4.0.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "flask-jwt-oidc (>=0.8.0,<0.9.0)",
  "launchdarkly-server-sdk (>=9.10.0,<10.0.0)",
  "flask-babel (>=4.0.0,<5.0.0)",
  "dpath (>=2.2.0,<3.0.0)",
  "pg8000 (>=1.31.2,<2.0.0)",
  "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
packages = [{include = "business_pay", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
black = "^24.4.2"
zimports = "^0.6.1"
lovely-pytest-docker = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
